[package]
name = "grpc-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
futures = "0.3.23"
http = "0.2.8"
hyper = { version = "0.14.20", features = ["full"] }
index_list = "0.2.7"
metainfo = "0.6.2"
motore = { git = "https://github.com/cloudwego/motore.git", rev = "0ee4cb5f38702fae277412b20756ddd5ab095b81" }
newtype = "0.2.1"
tokio = { version = "1.20.1", features = ["sync", "net"] }
tower = "0.4.13"
tower-layer = "0.3.1"
tracing = "0.1.36"
volo = { git = "https://github.com/ethe/volo.git", package = "volo", rev = "de87e680ffa00a39fa9c249b118d0064414a9cc1" }
volo-grpc = { git = "https://github.com/ethe/volo.git", package = "volo-grpc", rev = "de87e680ffa00a39fa9c249b118d0064414a9cc1" }
